convert the info into one line

--- a/jupyter_explore/new_DutchVegetationDatabase.ipynb
+++ b/jupyter_explore/new_DutchVegetationDatabase.ipynb
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "filepath=\"C:\\\\zsofia\\\\Amsterdam\\\\GitHub\\\\eEcoLiDAR\\\\Annotation\\\\Data\\\\\"\n",
+    "filepath=\"D:\\\\GitHub\\\\eEcoLiDAR\\\\Annotation\\\\Data\\\\\"\n",
     "\n",
     "header=pd.read_csv(filepath+'Phragmites_australis_header.csv',sep='\\t')\n",
     "species=pd.read_csv(filepath+'Phragmites_australis_species.csv',sep='\\t')\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -155,14 +155,18 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>625</th>\n",
-       "      <td>45503</td>\n",
-       "      <td>45503</td>\n",
-       "      <td>4de Bosstatistiek</td>\n",
-       "      <td>8-8-2007</td>\n",
+       "      <th>0</th>\n",
+       "      <td>192</td>\n",
+       "      <td>192</td>\n",
+       "      <td>Braun/Blanquet (B,D&amp;S)</td>\n",
+       "      <td>2-9-1996</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>4.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>70.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -171,218 +175,62 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>r04CA01 - Charetum canescentis</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>5.837076</td>\n",
-       "      <td>53.454129</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Ameland</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>626</th>\n",
-       "      <td>45506</td>\n",
-       "      <td>45506</td>\n",
-       "      <td>4de Bosstatistiek</td>\n",
-       "      <td>8-8-2007</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>r04BB01 - Charetum vulgaris</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>5.837512</td>\n",
-       "      <td>53.454100</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Ameland</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>627</th>\n",
-       "      <td>45519</td>\n",
-       "      <td>45519</td>\n",
-       "      <td>4de Bosstatistiek</td>\n",
-       "      <td>10-8-2007</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>r08BB04C - Typho-Phragmitetum typicum</td>\n",
+       "      <td>r33RG06 - RG Solanum dulcamara-Phragmites aust...</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>5.891322</td>\n",
-       "      <td>53.458847</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Ameland</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>628</th>\n",
-       "      <td>45532</td>\n",
-       "      <td>45532</td>\n",
-       "      <td>4de Bosstatistiek</td>\n",
-       "      <td>14-8-2007</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>r04CA01 - Charetum canescentis</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>5.914237</td>\n",
-       "      <td>53.462648</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Ameland</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>630</th>\n",
-       "      <td>46335</td>\n",
-       "      <td>46335</td>\n",
-       "      <td>4de Bosstatistiek</td>\n",
-       "      <td>13-8-2008</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>r33RG03 - RG Eupatorium cannabinum-Phragmites ...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5.896813</td>\n",
-       "      <td>53.464889</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Ameland</td>\n",
+       "      <td>4.962352</td>\n",
+       "      <td>53.262944</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Adviesburos (1)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     PlotObservationID  PlotID   Bedekkingsschaal Datum van opname  \\\n",
-       "625              45503   45503  4de Bosstatistiek         8-8-2007   \n",
-       "626              45506   45506  4de Bosstatistiek         8-8-2007   \n",
-       "627              45519   45519  4de Bosstatistiek        10-8-2007   \n",
-       "628              45532   45532  4de Bosstatistiek        14-8-2007   \n",
-       "630              46335   46335  4de Bosstatistiek        13-8-2008   \n",
+       "   PlotObservationID  PlotID        Bedekkingsschaal Datum van opname  \\\n",
+       "0                192     192  Braun/Blanquet (B,D&S)         2-9-1996   \n",
        "\n",
-       "     Lengte proefvlak (m)  Breedte proefvlak (m)  Opp. proefvlak (m²)  \\\n",
-       "625                   2.0                    2.0                  4.0   \n",
-       "626                   2.0                    2.0                  4.0   \n",
-       "627                   2.0                    2.0                  4.0   \n",
-       "628                   2.0                    2.0                  4.0   \n",
-       "630                   NaN                    NaN                  4.0   \n",
+       "   Lengte proefvlak (m)  Breedte proefvlak (m)  Opp. proefvlak (m²)  \\\n",
+       "0                   2.0                    2.0                  4.0   \n",
        "\n",
-       "     Bedekking totaal (%)  Bedekking boomlaag (%)  Bedekking struiklaag (%)  \\\n",
-       "625                   NaN                     NaN                       NaN   \n",
-       "626                   NaN                     NaN                       NaN   \n",
-       "627                   NaN                     NaN                       NaN   \n",
-       "628                   NaN                     NaN                       NaN   \n",
-       "630                   9.0                     NaN                       NaN   \n",
+       "   Bedekking totaal (%)  Bedekking boomlaag (%)  Bedekking struiklaag (%)  \\\n",
+       "0                  70.0                     NaN                       NaN   \n",
        "\n",
-       "     Bedekking kruidlaag (%)  Bedekking moslaag (%)  \\\n",
-       "625                      NaN                    NaN   \n",
-       "626                      NaN                    NaN   \n",
-       "627                      NaN                    NaN   \n",
-       "628                      NaN                    NaN   \n",
-       "630                      9.0                    1.0   \n",
+       "   Bedekking kruidlaag (%)  Bedekking moslaag (%)  Hoogte (hoge) boomlaag (m)  \\\n",
+       "0                     70.0                    NaN                         NaN   \n",
        "\n",
-       "     Hoogte (hoge) boomlaag (m)  Hoogte lage boomlaag (m)  \\\n",
-       "625                         NaN                       NaN   \n",
-       "626                         NaN                       NaN   \n",
-       "627                         NaN                       NaN   \n",
-       "628                         NaN                       NaN   \n",
-       "630                         NaN                       NaN   \n",
+       "   Hoogte lage boomlaag (m)  Hoogte (hoge) struiklaag (m)  \\\n",
+       "0                       NaN                           NaN   \n",
        "\n",
-       "     Hoogte (hoge) struiklaag (m)  Hoogte lage struiklaag (m)  \\\n",
-       "625                           NaN                         NaN   \n",
-       "626                           NaN                         NaN   \n",
-       "627                           NaN                         NaN   \n",
-       "628                           NaN                         NaN   \n",
-       "630                           NaN                         NaN   \n",
+       "   Hoogte lage struiklaag (m)  Gem. hoogte (hoge) kruidl (cm)  \\\n",
+       "0                         NaN                             NaN   \n",
        "\n",
-       "     Gem. hoogte (hoge) kruidl (cm)  Gem. hoogte lage kruidl. (cm)  \\\n",
-       "625                             NaN                            NaN   \n",
-       "626                             NaN                            NaN   \n",
-       "627                             NaN                            NaN   \n",
-       "628                             NaN                            NaN   \n",
-       "630                             NaN                            NaN   \n",
+       "   Gem. hoogte lage kruidl. (cm)  Maximale hoogte kruidlaag (cm)  \\\n",
+       "0                            NaN                             NaN   \n",
        "\n",
-       "     Maximale hoogte kruidlaag (cm)  \\\n",
-       "625                             NaN   \n",
-       "626                             NaN   \n",
-       "627                             NaN   \n",
-       "628                             NaN   \n",
-       "630                             NaN   \n",
+       "                                         Associa (1)  Incompleteness (1)  \\\n",
+       "0  r33RG06 - RG Solanum dulcamara-Phragmites aust...                 0.1   \n",
        "\n",
-       "                                           Associa (1)  Incompleteness (1)  \\\n",
-       "625                     r04CA01 - Charetum canescentis                 0.3   \n",
-       "626                        r04BB01 - Charetum vulgaris                 0.3   \n",
-       "627              r08BB04C - Typho-Phragmitetum typicum                 0.1   \n",
-       "628                     r04CA01 - Charetum canescentis                 0.3   \n",
-       "630  r33RG03 - RG Eupatorium cannabinum-Phragmites ...                 NaN   \n",
-       "\n",
-       "     Longitude   Latitude  Location uncertainty (m)  Dataset  \n",
-       "625   5.837076  53.454129                         3  Ameland  \n",
-       "626   5.837512  53.454100                         3  Ameland  \n",
-       "627   5.891322  53.458847                         3  Ameland  \n",
-       "628   5.914237  53.462648                         3  Ameland  \n",
-       "630   5.896813  53.464889                         3  Ameland  "
+       "   Longitude   Latitude  Location uncertainty (m)          Dataset  \n",
+       "0   4.962352  53.262944                       100  Adviesburos (1)  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.set_option('display.max_columns', None)\n",
-    "header_upyear.head(n=5)"
+    "header_upyear.head(n=20)\n",
+    "\n",
+    "header_specific=header[(header[\"PlotObservationID\"]==192)]\n",
+    "header_specific"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +493,7 @@
        "19     12702  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
