--- a/jupyter_explore/new_DutchDB.ipynb
+++ b/jupyter_explore/new_DutchDB.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +22,7 @@
     "from shapely.geometry import Point\n",
     "from geopandas import GeoSeries, GeoDataFrame\n",
     "\n",
-    "filepath=\"D:\\\\GitHub\\\\eEcoLiDAR\\\\Annotation\\\\Data\\\\\"\n",
+    "filepath=\"C:\\\\zsofia\\\\Amsterdam\\\\GitHub\\\\eEcoLiDAR\\\\myPhD_annotation\\\\Data\\\\\"\n",
     "\n",
     "header=pd.read_csv(filepath+'Phragmites_australis_header.csv',sep='\\t')\n",
     "species=pd.read_csv(filepath+'Phragmites_australis_species.csv',sep='\\t')"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "PlotObservationID                   int64\nPlotID                              int64\nBedekkingsschaal                   object\nDatum van opname                   object\nLengte proefvlak (m)              float64\nBreedte proefvlak (m)             float64\nOpp. proefvlak (m²)               float64\nBedekking totaal (%)              float64\nBedekking boomlaag (%)            float64\nBedekking struiklaag (%)          float64\nBedekking kruidlaag (%)           float64\nBedekking moslaag (%)             float64\nHoogte (hoge) boomlaag (m)        float64\nHoogte lage boomlaag (m)          float64\nHoogte (hoge) struiklaag (m)      float64\nHoogte lage struiklaag (m)        float64\nGem. hoogte (hoge) kruidl (cm)    float64\nGem. hoogte lage kruidl. (cm)     float64\nMaximale hoogte kruidlaag (cm)    float64\nAssocia (1)                        object\nIncompleteness (1)                float64\nLongitude                         float64\nLatitude                          float64\nLocation uncertainty (m)            int64\nDataset                            object\nSpecies name                       object\nLayer                              object\nCover %                            object\nCover code                         object\ndtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
